bluec-tests/tests/invalid/types_short/bad_specifiers.c
int main(void) {
    /* Cannot declare a variable with two "short" specifiers */
    short int short i = 0;
    return i;
}